Fixed issues
-jisho having 3 links
-waves not showing up
-bullet points
-extra width

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,7 +93,7 @@ h2 { font-family: 'Lexend Deca', sans-serif; font-weight: normal; font-size: 24p
 
 h3 { font-family: 'Lexend Deca', sans-serif; font-weight: normal; font-size: 18px; margin-top: 30px; margin-bottom: 0px; }
 
-header { position: fixed; top: 0; height: 75px; width: 100%; font-family: 'Lexend Deca', sans-serif; background: #000000; color: #FFFFFF; z-index: 9; overflow: hidden; }
+header { position: fixed; top: 0; left: 0; height: 75px; width: 100%; font-family: 'Lexend Deca', sans-serif; background: #000000; color: #FFFFFF; z-index: 9; overflow: hidden; }
 
 header .logo { display: inline-block; float: left; margin: 19px 0 26px 36px; }
 
@@ -105,7 +105,7 @@ header:hover .name, header:focus .name { color: #FFFFFF; }
 
 header:hover .role, header:focus .role { color: #FFE073; }
 
-footer { bottom: 0; left: 0; height: 75px; width: 100%; background: #000000; color: #767676; padding-left: 36px; z-index: 9; clear: both; }
+footer { bottom: 0; left: 0; height: 75px; background: #000000; color: #767676; padding-left: 36px; z-index: 9; clear: both; }
 
 footer p { margin-top: 0px; padding-top: 24px; }
 
